src/test/deca/context/invalid/homemade/tests/test328_affectation_sous_type/test328_affectation_sous_type4.deca
// test invalide de la règle 3.28

{
    float a = "toto";
}
